Revert "Fixed vertical scrollbar during animation"
This reverts commit fde15cdf5b596fc0de9a179862c21951abeca39c.

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -20,51 +20,24 @@
 }
 
 @keyframes logo-tiles-in {
-  0% {
-    opacity: 0;
-    filter: grayscale(1) hue-rotate(100deg);
-  }
-  25% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 1;
-  }
-  55% {
-    opacity: 0;
-  }
-  60% {
-    opacity: 1;
-    filter: grayscale(1) hue-rotate(100deg);
-  }
-  100% {
-    opacity: 1;
-    filter: grayscale(0) hue-rotate(0deg);
-  }
+  0%   { opacity: 0; filter: grayscale(1) hue-rotate(100deg); }
+  25%  { opacity: 1; }
+  50%  { opacity: 1; }
+  55%  { opacity: 0; }
+  60%  { opacity: 1; filter: grayscale(1) hue-rotate(100deg); }
+  100% { opacity: 1; filter: grayscale(0) hue-rotate(0deg); }
 }
 
 @keyframes logo-tiles-hover {
-  from {
-    filter: hue-rotate(0deg)
-  }
-  to {
-    filter: hue-rotate(360deg)
-  }
+  from { filter: hue-rotate(0deg) }
+  to   { filter: hue-rotate(360deg) }
 }
 
 @keyframes root-gradient {
-  0% {
-    opacity: 0.0;
-  }
-  40% {
-    opacity: 1.0;
-  }
-  60% {
-    opacity: 1.0;
-  }
-  100% {
-    opacity: 0.0;
-  }
+  0%    { opacity: 0.0; }
+  40%   { opacity: 1.0; }
+  60%   { opacity: 1.0; }
+  100%  { opacity: 0.0; }
 }
 
 html {
@@ -79,13 +52,12 @@ html:before {
   content: "";
   position: absolute;
   display: block;
-  top: 0;
-  left: 0;
+  top: 0; left: 0;
   height: 100%;
   width: 100%;
   opacity: 0;
   z-index: -1;
-  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.33, #ffbb00), color-stop(0.67, #00a1f1));
+  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.33, #ffbb00), color-stop(0.67,#00a1f1) );
   background-image: -moz-linear-gradient(center bottom, #ffbb00 33%, #00a1f1 67%);
   animation: 4s both root-gradient linear infinite;
 }
@@ -99,7 +71,6 @@ body {
   background-color: rgba(18, 18, 18, 1);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-y: hidden;
 }
 
 ::-moz-selection {
@@ -128,8 +99,7 @@ a:hover {
   flex: 1;
 }
 
-p,
-h1 {
+p, h1 {
   margin: 0;
   padding: 10px 0.5em;
 }
@@ -156,17 +126,9 @@ main p {
   animation-delay: calc(var(--move-in-base-delay) * 5);
 }
 
-main p:nth-child(2) {
-  animation-delay: calc(var(--move-in-base-delay) * 6)
-}
-
-main p:nth-child(3) {
-  animation-delay: calc(var(--move-in-base-delay) * 7)
-}
-
-main p:nth-child(4) {
-  animation-delay: calc(var(--move-in-base-delay) * 8)
-}
+main p:nth-child(2) { animation-delay: calc(var(--move-in-base-delay) * 6) }
+main p:nth-child(3) { animation-delay: calc(var(--move-in-base-delay) * 7) }
+main p:nth-child(4) { animation-delay: calc(var(--move-in-base-delay) * 8) }
 
 .logo-link {
   display: block;
@@ -175,9 +137,7 @@ main p:nth-child(4) {
   margin: 2rem auto;
 }
 
-.logo-link:hover {
-  animation: 1s both logo-tiles-hover linear infinite;
-}
+.logo-link:hover { animation: 1s both logo-tiles-hover linear infinite; }
 
 .logo-image {
   display: block;
@@ -201,24 +161,10 @@ main p:nth-child(4) {
   animation: var(--logo-tiles-in-animation);
 }
 
-.logo-tile--red {
-  background-color: #F35325;
-}
-
-.logo-tile--green {
-  background-color: #81BC06;
-  animation-delay: var(--logo-tiles-in-delay);
-}
-
-.logo-tile--blue {
-  background-color: #05A6F0;
-  animation-delay: calc(var(--logo-tiles-in-delay) * 2);
-}
-
-.logo-tile--yellow {
-  background-color: #FFBA08;
-  animation-delay: calc(var(--logo-tiles-in-delay) * 3);
-}
+.logo-tile--red    { background-color: #F35325; }
+.logo-tile--green  { background-color: #81BC06; animation-delay: var(--logo-tiles-in-delay); }
+.logo-tile--blue   { background-color: #05A6F0; animation-delay: calc(var(--logo-tiles-in-delay) * 2); }
+.logo-tile--yellow { background-color: #FFBA08; animation-delay: calc(var(--logo-tiles-in-delay) * 3); }
 
 .footer {
   font-size: 80%;
@@ -241,15 +187,18 @@ footer [href*="github"]:hover {
     max-width: calc(100vw - 20vw);
     margin: 0 auto;
   }
+
   .container p {
     font-size: 18px;
   }
+
   footer {
     text-align: unset;
     padding: 1em 0 2em;
     max-width: calc(100vw - 20vw);
     margin: 0 auto;
   }
+
   footer span {
     display: block;
   }
